style(authors):Fixes recipe creation form responsiveness. The display grid with span 2 in the cover and preparation steps fields caused the form to break the mobile layout. This property has been removed from this form.

--- a/recipes/static/recipes/css/styles.css
+++ b/recipes/static/recipes/css/styles.css
@@ -369,6 +369,10 @@ img {
    color: var(--color-white);
 }
 
+.register-form {
+   margin-bottom: 80px;
+}
+
 .message {
    padding: 1rem 2rem;
    border-radius: 0.4rem;
@@ -433,9 +437,9 @@ img {
    cursor: pointer;
 }
 
-.span-2 {
+/* .span-2 {
    grid-column: span 2;
-}
+} */
 
 .author-dashboard-container {
    max-width: 64rem;
